install_data(
  join_paths('scalable', 'parlatype.svg'),
  rename: app_id + '.svg',
  install_dir: join_paths(datadir, 'icons', 'hicolor', 'scalable', 'apps'),
)

install_data(
  join_paths('symbolic', 'parlatype-symbolic.svg'),
  rename: app_id + '-symbolic.svg',
  install_dir: join_paths(datadir, 'icons', 'hicolor', 'symbolic', 'apps'),
)