iconglade16dir = $(GLADE_PIXMAP_DIR)/hicolor/16x16/actions
iconglade16_DATA = 16x16/actions/widget-pt-waveviewer.png

iconglade22dir = $(GLADE_PIXMAP_DIR)/hicolor/22x22/actions
iconglade22_DATA = 22x22/actions/widget-pt-waveviewer.png

EXTRA_DIST = \
	meson.build		\
	$(iconglade16_DATA)	\
	$(iconglade22_DATA)
	
